--- a/templates/blocks/form-section/form-section.css
+++ b/templates/blocks/form-section/form-section.css
@@ -45,7 +45,7 @@
     transition: transform 300ms ease;
 }
 
-.os-form-section.active .os-form-section-arrow{
+.os-form-section-question-wrapper.active .os-form-section-arrow{
     -moz-transform: rotate(180deg);
     -webkit-transform: rotate(180deg);
     -o-transform: rotate(180deg);
@@ -67,4 +67,13 @@
 .os-form-section-button-wrapper{
     display: block;
     text-align: center;
+}
+
+.os-form-section-preview{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-height: 450px;
+    margin-top:20px;
+    margin-bottom:20px;
 }
