--- a/templates/blocks/form-section/form-section.css
+++ b/templates/blocks/form-section/form-section.css
@@ -13,7 +13,8 @@
     text-align: center;
 }
 
-.os-form-section-question-wrapper {
+.os-form-section-question-wrapper,
+.greyed-out-form-section-question-wrapper {
     position: relative;
     border-radius: 5px;
     padding: 13px 40px 10px 20px;
@@ -21,7 +22,8 @@
     cursor: pointer;
 }
 
-.os-form-section-question-wrapper > h4{
+.os-form-section-question-wrapper > h4,
+.greyed-out-form-section-question-wrapper > h4{
     display: inline-block;
     font-weight:400;
     font-size:1.2em;
@@ -31,7 +33,8 @@
     vertical-align: bottom;
 }
 
-.os-form-section-question-wrapper > h4 > p{
+.os-form-section-question-wrapper > h4 > p,
+.greyed-out-form-section-question-wrapper > h4 > p{
     margin-bottom: 0;
 }
 
@@ -86,4 +89,41 @@
 }
 .important-section.good{
     border-color:#669efc;
+}
+
+.greyed-out-form-section{
+    width:100%;
+    position:relative;
+    width: 100%;
+    position: relative;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-top: 10px;
+    background-color: #fafafb;
+}
+
+.greyed-out-form-section-bg{
+    background-color: #ffffff;
+    background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%234359ff' fill-opacity='0.44' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
+    opacity:0.85;
+    position:absolute;
+    top:0;
+    bottom:0;
+    right:0;
+    left:0;
+}
+
+.greyed-out-premium-tag{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    margin-top: 0px;
+    z-index: 2;
+    background-color: #669efc;
+    font-size: 0.7em;
+    padding: 7px;
+    padding-top: 10px;
+    color: white;
+    text-transform: uppercase;
+    border-radius: 50px;
 }
